add compile suffix

--- a/TestModels/dafny-dependencies/StandardLibrary/Makefile
+++ b/TestModels/dafny-dependencies/StandardLibrary/Makefile
@@ -90,6 +90,7 @@ transpile_implementation:
 		--no-verify \
 		--cores:$(CORES) \
 		--optimize-erasable-datatype-wrapper:false \
+		--compile-suffix \
 		--unicode-char:false \
 		--function-syntax:3 \
 		--output $(OUT) \
