--- a/.github/workflows/test_models_java_tests.yml
+++ b/.github/workflows/test_models_java_tests.yml
@@ -60,7 +60,7 @@ jobs:
         id: set-options
         run: |
           if [ "${{inputs.dafny}}" == "4.8.0" ]; then
-            echo "DAFNY_OPTIONS=--allow-warnings --include-test-runner --legacy-data-constructors --legacy-module-names" >> $GITHUB_ENV
+            echo "DAFNY_OPTIONS=--allow-warnings --include-test-runner --legacy-data-constructors --legacy-module-names --compile-suffix" >> $GITHUB_ENV
           else
             echo "no options"
           fi
