--- a/.github/workflows/test_models_rust_tests.yml
+++ b/.github/workflows/test_models_rust_tests.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Setup Dafny options
         id: set-options
         run: |
-          echo "DAFNY_OPTIONS=--allow-warnings --include-test-runner --compile-suffix --legacy-data-constructors --compile-syntax" >> $GITHUB_ENV
+          echo "DAFNY_OPTIONS=--allow-warnings --include-test-runner --compile-suffix --legacy-data-constructors" >> $GITHUB_ENV
 
       - name: Set up Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
