--- a/TestModels/Errors/runtimes/rust/Cargo.toml
+++ b/TestModels/Errors/runtimes/rust/Cargo.toml
@@ -5,13 +5,18 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+wrapped-client = []
+
 [dependencies]
-aws-smithy-runtime = {version = "1.7.1", features=["client"]}
 aws-smithy-runtime-api = {version = "1.7.2", features=["client"]}
 aws-smithy-types = "1.2.4"
 dafny_runtime = { path = "../../../dafny-dependencies/dafny_runtime_rust"}
 
-[dev-dependencies.tokio]
+[dev-dependencies]
+simple_errors = { path = ".", features = ["wrapped-client"] }
+
+[dependencies.tokio]
 version = "1.26.0"
 features = ["full"]
 
