--- a/TestModels/Errors/Makefile
+++ b/TestModels/Errors/Makefile
@@ -19,7 +19,7 @@ SMITHY_DEPS=dafny-dependencies/Model/traits.smithy
 
 GO_MODULE_NAME="github.com/smithy-lang/smithy-dafny/TestModels/Errors"
 
-TRANSLATION_RECORD_PYTHON := \
+TRANSLATION_RECORD_GO := \
     dafny-dependencies/StandardLibrary/runtimes/go/ImplementationFromDafny-go/ImplementationFromDafny-go.dtr
 
 # This project has no dependencies 
