--- a/TestModels/SimpleTypes/SimpleEnumV2/Makefile
+++ b/TestModels/SimpleTypes/SimpleEnumV2/Makefile
@@ -14,6 +14,8 @@ NAMESPACE=simple.types.enumV2
 PROJECT_SERVICES := \
         SimpleTypesEnumV2
 
+MAIN_SERVICE_FOR_RUST := SimpleTypesEnumV2
+
 SERVICE_NAMESPACE_SimpleTypesEnumV2=simple.types.enumV2
 
 SERVICE_DEPS_SimpleTypesEnumV2 :=
