--- a/TestModels/aws-sdks/kms/runtimes/rust/Cargo.toml
+++ b/TestModels/aws-sdks/kms/runtimes/rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "aws_sdk_ddb"
+name = "kms"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,13 +10,14 @@ wrapped-client = []
 
 [dependencies]
 aws-sdk-kms = "1.43.0"
+aws-config = "1.5.4"
 aws-smithy-runtime = {version = "1.6.0", features = ["client"] }
 aws-smithy-runtime-api = {version = "1.7.0", features = ["client"] }
 aws-smithy-types = "1.2.0"
 dafny_runtime = { path = "../../../../dafny-dependencies/dafny_runtime_rust"}
 
 [dev-dependencies]
-aws_sdk_ddb = { path = ".", features = ["wrapped-client"] }
+kms = { path = ".", features = ["wrapped-client"] }
 
 [dependencies.tokio]
 version = "1.26.0"
