--- a/TestModels/aws-sdks/ddb/runtimes/rust/Cargo.toml
+++ b/TestModels/aws-sdks/ddb/runtimes/rust/Cargo.toml
@@ -10,6 +10,7 @@ wrapped-client = []
 
 [dependencies]
 aws-sdk-dynamodb = "1.45.0"
+aws-config = "1.5.4"
 aws-smithy-runtime = {version = "1.6.0", features = ["client"] }
 aws-smithy-runtime-api = {version = "1.7.0", features = ["client"] }
 aws-smithy-types = "1.2.0"
