--- a/.github/workflows/test_models_go_tests.yml
+++ b/.github/workflows/test_models_go_tests.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         library: [
           # TestModels/dafny-dependencies/StandardLibrary, # This stores current Polymorph dependencies that all TestModels depend on
-          TestModels/Aggregate,
+          TestModels/RecursiveShape,
           # TestModels/AggregateReferences,
           TestModels/CodegenPatches,
           TestModels/Constraints,
