--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,22 +16,22 @@ jobs:
     uses: ./.github/workflows/test_models_dafny_verification.yml
     with:
       dafny: ${{ inputs.dafny }}
-  manual-ci-java:
-    uses: ./.github/workflows/test_models_java_tests.yml
-    with:
-      dafny: ${{ inputs.dafny }}
-  manual-ci-net:
-    uses: ./.github/workflows/test_models_net_tests.yml
-    with:
-      dafny: ${{ inputs.dafny }}
-  manual-ci-rust:
-    uses: ./.github/workflows/test_models_rust_tests.yml
-    with:
-      dafny: ${{ inputs.dafny }}
-  manual-ci-python:
-    uses: ./.github/workflows/test_models_python_tests.yml
-    with:
-      dafny: ${{ inputs.dafny }}
+  # manual-ci-java:
+  #   uses: ./.github/workflows/test_models_java_tests.yml
+  #   with:
+  #     dafny: ${{ inputs.dafny }}
+  # manual-ci-net:
+  #   uses: ./.github/workflows/test_models_net_tests.yml
+  #   with:
+  #     dafny: ${{ inputs.dafny }}
+  # manual-ci-rust:
+  #   uses: ./.github/workflows/test_models_rust_tests.yml
+  #   with:
+  #     dafny: ${{ inputs.dafny }}
+  # manual-ci-python:
+  #   uses: ./.github/workflows/test_models_python_tests.yml
+  #   with:
+  #     dafny: ${{ inputs.dafny }}
   manual-ci-go:
     uses: ./.github/workflows/test_models_go_tests.yml
     with:
