--- a/TestModels/dafny-dependencies/StandardLibrary/runtimes/python/pyproject.toml
+++ b/TestModels/dafny-dependencies/StandardLibrary/runtimes/python/pyproject.toml
@@ -12,11 +12,10 @@ include = ["**/internaldafny/generated/*.py"]
 
 [tool.poetry.dependencies]
 python = "^3.11.0"
-DafnyRuntimePython = "^4.7.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.0"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
