--- a/TestModels/RecursiveShape/Makefile
+++ b/TestModels/RecursiveShape/Makefile
@@ -3,16 +3,14 @@
 
 CORES=2
 
-ENABLE_EXTERN_PROCESSING=1
+#TODO: Think about extern processing in new test models
+ENABLE_EXTERN_PROCESSING=0
 RUST_BENERATED=1
 
 include ../SharedMakefile.mk
 
 PROJECT_SERVICES := \
 	SimpleRecursiveShape
-
-TRANSLATION_RECORD_PYTHON := \
-    --translation-record ../dafny-dependencies/StandardLibrary/runtimes/python/src/standard_library/internaldafny/generated/dafny_src-py.dtr
 
 SERVICE_NAMESPACE_SimpleRecursiveShape=simple.recursiveShape
 
@@ -24,13 +22,6 @@ GO_MODULE_NAME="github.com/smithy-lang/smithy-dafny/TestModels/RecursiveShape"
 
 TRANSLATION_RECORD_GO := \
     dafny-dependencies/StandardLibrary/runtimes/go/ImplementationFromDafny-go/ImplementationFromDafny-go.dtr
-
-# Python
-
-PYTHON_MODULE_NAME=simple_recursiveShape
-
-TRANSLATION_RECORD_PYTHON := \
-    --translation-record ../dafny-dependencies/StandardLibrary/runtimes/python/src/standard_library/internaldafny/generated/dafny_src-py.dtr
 
 # Constants for languages that drop extern names (Python, Go)
 
