--- a/TestModels/aws-sdks/kms/Makefile
+++ b/TestModels/aws-sdks/kms/Makefile
@@ -17,6 +17,8 @@ NAMESPACE=com.amazonaws.kms
 PROJECT_SERVICES := \
 	ComAmazonawsKms\
 
+MAIN_SERVICE_FOR_RUST := ComAmazonawsKms
+
 SERVICE_NAMESPACE_ComAmazonawsKms=com.amazonaws.kms
 
 SERVICE_DEPS_ComAmazonawsKms :=
