--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -53,9 +53,9 @@ jobs:
       fail-fast: false
       matrix:
         # Rust code generation is under development and depends on pending changes to the
-        # Dafny Rust code generation, so we test on a specific commit from the feat-rust feature branch instead.
+        # Dafny Rust code generation, so we test on a specific unreleased commit instead.
         dafny-version:
-          - ab5af65d33b7d44905807f6598b0fbccd5fc39c9
+          - 1d6d38326e967d78079fce3523bbaf35671cefff
     uses: ./.github/workflows/test_models_rust_tests.yml
     with:
       dafny: ${{ matrix.dafny-version }}
