--- a/.github/workflows/test_models_go_tests.yml
+++ b/.github/workflows/test_models_go_tests.yml
@@ -50,15 +50,16 @@ jobs:
         with:
           submodules: recursive
 
+      # TODO: Use the released version once all the Dafny issues aew fixed.
       - name: Setup Dafny
         uses: dafny-lang/setup-dafny-action@v1.7.0
         with:
-          dafny-version: ${{ inputs.dafny }}
+          dafny-version: "nightly-latest"
 
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: "1.21"
+          go-version: "1.23"
 
       - name: Install Go imports
         run: |
