add ListBucket permission

--- a/cfn/ci.yaml
+++ b/cfn/ci.yaml
@@ -119,6 +119,11 @@ Resources:
         Statement:
           - Effect: Allow
             Action:
+              - "s3:ListBucket"
+            Resource:
+              - !GetAtt S3DafnyTestBucket.Arn
+          - Effect: Allow
+            Action:
               - "s3:PutObject"
               - "s3:GetObject"
               - "s3:DeleteObject"
