chore: add S3 test model for Python (#651)
Co-authored-by: Lucas McDonald <lucasmcdonald3@gmail.com>

---------

Co-authored-by: Lucas McDonald <lucasmcdonald3@gmail.com>

--- a/cfn/ci.yaml
+++ b/cfn/ci.yaml
@@ -95,6 +95,41 @@ Resources:
             Resource:
               - !Sub "arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:*"
 
+  S3DafnyTestBucket:
+    Type: "AWS::S3::Bucket"
+    Properties:
+      BucketName: s3-dafny-test-bucket
+      LifecycleConfiguration:
+        Rules:
+          - Id: Expire in 14 days
+            Status: Enabled
+            ExpirationInDays: 14
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: false
+        BlockPublicPolicy: false
+        IgnorePublicAcls: false
+        RestrictPublicBuckets: false
+
+  S3DafnyTestBucketUsage:
+    Type: "AWS::IAM::ManagedPolicy"
+    Properties:
+      ManagedPolicyName: S3-Dafny-Test-Bucket-Policy
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Action:
+              - "s3:ListBucket"
+            Resource:
+              - !GetAtt S3DafnyTestBucket.Arn
+          - Effect: Allow
+            Action:
+              - "s3:PutObject"
+              - "s3:GetObject"
+              - "s3:DeleteObject"
+            Resource:
+              - !Join ["", [!GetAtt S3DafnyTestBucket.Arn, "/*"]]
+
   GitHubCIRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -105,6 +140,7 @@ Resources:
         - !Ref KMSUsage
         - !Ref DDBDafnyTestTableUsage
         - !Ref SQSUsage
+        - !Ref S3DafnyTestBucketUsage
       AssumeRolePolicyDocument: !Sub |
         {
           "Version": "2012-10-17",   
