--- a/.github/workflows/test_models_dafny_verification.yml
+++ b/.github/workflows/test_models_dafny_verification.yml
@@ -30,7 +30,7 @@ jobs:
         dafny-version:
           - ${{ inputs.dafny }}
         shard: ${{ fromJson(needs.populate-matrix-dimensions.outputs.shard-list) }}
-        os: [ubuntu-latest, windows-latest, macos-12]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
